fix issues of card container alignment

--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -1,8 +1,8 @@
 .cardContainer {
   position: relative;
   margin: 0 auto;
-  width: 25rem;
-  height: 37.2rem;
+  width: 90%;
+  height: 37.2rem !important;
   background-color: #fff;
   border-radius: 0.8rem;
   display: flex;
@@ -23,6 +23,14 @@
 
 .cardContainer:hover .brandAndColorContainer {
   transform: translateY(1rem);
+}
+
+.imageContainer {
+  width: 100%;
+  height: 23rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .productImage {
@@ -68,25 +76,6 @@
   text-align: center;
   color: #4b9ce2;
   font-size: 2rem;
-}
-
-@media (max-width: 90em) {
-  .cardContainer {
-    width: 24rem;
-  }
-}
-
-/* @media (max-width: 43em) {
-  .cardContainer {
-    width: 24rem;
-  }
-} */
-
-@media (max-width: 37.5) {
-  .brandAndColorContainer {
-    flex-direction: column;
-    justify-content: flex-start;
-  }
 }
 
 @media (max-width: 32em) {
