--- a/src/components/products/Products.module.css
+++ b/src/components/products/Products.module.css
@@ -2,7 +2,7 @@
   width: 77.1%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 28rem);
+  grid-template-columns: repeat(5, 1fr);
   justify-content: center;
   align-content: center;
   gap: 2rem;
@@ -11,9 +11,15 @@
   padding-top: 3rem;
 }
 
+@media (max-width: 118.75em) {
+  .productsContainer {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
 @media (max-width: 90em) {
   .productsContainer {
-    grid-template-columns: repeat(auto-fill, 26rem);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
